HarvestMan-lite/harvestman/lib/js/samples/fail/bportugal.js
document.writeln("<frameset framespacing=\"0\" frameborder=\"0\" rows=\"83,*,31\">"
  + "<frame name=\"topo\" scrolling=\"no\" noresize target=\"main\" src=\"default_top_p.htm\""
  + "marginwidth=\"0\" marginheight=\"0\">"
  + "<frameset cols=\"119,*,145\">"
  + " <frame name=\"contents\" target=\"main\" src=\"default_toc_p.htm\" scrolling=\"no\">"
  + " <frame name=\"main\" src=\"" + (location.search ? location.search.substring(1) : "principal_p.htm") + "\" scrolling=\"auto\" marginwidth=\"0\""
  + " marginheight=\"0\" noresize>"
  +     "<frame name=\"euromenu\" src=\"default_menu_p.htm\" target=\"main\" scrolling=\"auto\" marginwidth=\"0\""
  + "  marginheight=\"0\" noresize>"
  + "</frameset>"
  + "<frame name=\"bottom\" scrolling=\"no\" noresize target=\"main\" marginwidth=\"0\""
  + " marginheight=\"0\" src=\"scripts/default_bottom_p.asp\">"
  + "<noframes>"
  + "<body topmargin=\"0\" leftmargin=\"0\">"
  + "<p>This page uses frames, but your browser doesn't support them.</p>"
  + "</body>"
  + "</noframes>"
  + "</frameset>");